# quotewise

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEMO.md  FLOWS.md  PRODUCTION_SETUP.md  PROMPTS.md  SPEC.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py  sample_payloads.py  sample_twilio_payloads.py  test_admin_prefix.py  test_approval_keywords.py  test_approval_service.py  test_auth_deps.py  test_contractor_admin_engine.py  test_conversation_engine.py  test_forward_payload.py  test_forward_session_repo.py  test_forwarded_delivery.py  test_forwarded_quote_engine.py  test_handlers.py  test_llm_factory.py  test_llm_mock.py  test_onboarding_api.py  test_payload_parser.py  test_pdf_service.py  test_phone_normalize.py  test_phone_strip.py  test_pricing_evaluator.py  test_pricing_expr.py  test_pricing_schemas.py  test_prompt_loader.py  test_question_phraser.py  test_quotes_api.py  test_rate_card_parser.py  test_session_repo_db.py  test_slot_extractor.py  test_twilio_auth.py  test_twilio_client.py  test_twilio_payload.py  test_twilio_webhook.py  test_wa_media_download.py  test_webhook_signature.py  test_webhook_verification.py  test_worker_echo.py  (+6 more)
feature_requests/: FR-001-whatsapp-contractor-onboarding.md  FR-002-contractor-forwarded-buyer-quotes.md  FR-003-flexible-work-types.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json
scripts/: seed_data.py  simulate_conversation.py
(+97 files in other folders)
