[project]
name = "quotewise"
version = "0.1.0"
description = "AI-powered WhatsApp quotation tool for interior contractors"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "python-json-logger>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "jinja2>=3.1",
    "google-cloud-aiplatform>=1.70",
    "weasyprint>=62",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "testcontainers>=4.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
markers = ["integration: marks tests that require Docker (deselect with -m 'not integration')"]

[tool.ruff]
line-length = 100
target-version = "py311"
